@@ -1,6 +1,69 @@
-# **14.0.1**
+# **14.3.0**
+- **BUGFIX:** Duplikatsuche berücksicht nur HQ-URL wenn Film auch HQ ist.
+- **BUGFIX:** Alte tagesschau24 Filme in der Liste werden nur konvertiert wenn der Sender auch angezeigt werden soll.
+- **BUGFIX:** Darkmode Anzeigefehler im Kontextmenü des Tab Filme behoben.
+- **BUGFIX:** Filterdialog im Dark Mode ändert nicht mehr die Größe.
+- **FEATURE (macOS/Windows/Linux GNOME):** Auf unterstützten Systemen nimmt MV nun das aktuelle Erscheinungsbild des Betriebssystem an, wenn es unter *Einstellungen/Allgemein/Erscheinungsbild des Betriebssystem verwenden* konfiguriert wurde.
+- **FEATURE:** Lokale Filmduplikate können nach Anwahl eines Ursprungsfilmes über das Kontextmenü *"Duplikate entfernen..."* gesucht und permanent aus der Liste entfernt werden. *WICHTIG:* Etwaige Duplikat-Markierungen bleiben bis zum Neustart ggf. erhalten da keine listenweite Duplikaterkennung nach einer Löschung gestartet wird.
+- **FEATURE:** Thema und Sender werden nun in den Filtern gespeichert. Vielen Dank an @MarkusJannek
+- **FEATURE:** Tab Download Kontextmenüeintrag *Film (URL) abspielen* besitzt nun in eigenes Icon. @MarkusJannek
+
+# **14.2.0**
+- **(macOS):** Dies ist die letzte Version, die mit macOS 10.15 Catalina lauffähig ist. Zukünftig wird mindestens macOS 11 vorausgesetzt.
+- **(Linux/Windows):** Die von uns gelieferten Binaries enthalten JDK 23.0.2.
+- **(macOS):** Intel Version beinhaltet JDK 21, Apple Silicon Version nutzt JDK 23.0.2.
+- **JDK 23 und 23.0.1 enthalten einen Fehler im Shenandoah GC der die moderne Suche eklatant (6-10x) langsamer laufen lässt!** Dieser ist erst in 23.0.2 behoben. Es wird abgeraten die genannten Versionen mit MV zu verwenden.
+- **BUGFIX:** MV aktualisiert nun vor dem Download mittels `-dq` oder `--download-quit` Parameter die Filmliste.
+- **BUGFIX:** FlatLaf Regression gelöst, die manchmal zu einer inkorrekten Darstellung der Oberfläche führte.
+- **BUGFIX(Linux/macOS):** Im "Film Speichern"-Dialog wurde der Zielpfad im Dark Mode weiß dargestellt.
+- **BUGFIX:** "Film speichern"-Dialog speichert nun explizit seine Größe,etc und stellt sie wieder her.
+- **BUGFIX:** Im "Neues Abo anlegen"-Dialog werden Textfelder im Dark Mode nicht mehr weiß hinterlegt.
+- **BUGFIX:** Diverse Textfelder werden im Dark Mode nicht mehr mit weißem Hintergrund dargestellt.
+- **BUGFIX:** MV löscht bei einem fehlerhaften Lucene-Index diesen nun um einen erfolgreichen Start zu ermöglichen.
+- **BUGFIX:** Das Umbenennen von PSets in den Einstellungen funktioniert nun in allen Modi richtig.
+- **BUGFIX(Linux):** Der Einstellungen-Dialog öffnet sich nicht mehr vom Hauptfenster verdeckt.
+- **BUGFIX:** Der "Filmliste laden"-Dialog zeigt nun Scrollbars bei zu kleiner Dialoggröße an.
+- **BUGFIX(Linux):** Inkorrekte Verarbeitung der Parent-Beziehung bei Auswahldialogen wurde behoben.
+- **BUGFIX(Linux):** MV öffnet nun einen konfigurierten Browser im About-Dialog wenn Java keinen eigenen finden kann.
+- **BUGFIX(Linux/Windows):** Splashscreen zeigte keinen uniformen schwarzen Hintergrund mehr an.
+- **BUGFIX:** Moderne Suche unterstützt nun die Suche mit *special characters*.
+- **BUGFIX(macOS):** Darstellungsfehler beim Wechsel Dark-/Lightmode wurde behoben.
+- **BUGFIX:** *Filme/Film merken* wurde in *Filme/Ausgewählte Filme merken* umbenannt.
+- **BUGFIX:** *Film abspielen* Toolbar Button ist nur noch aktiv wenn keine Mehrfachauswahl in der Filmliste aktiv ist.
+- **FEATURE(Linux/Windows):** Das Aussehen von FlatLaf kann in `.mediathek3/flatlaf` angepasst werden.
+- **FEATURE:** Selektierte Einträge in `Suchhistorie bearbeiten`-Dialog können nun mittels Entfernen-Taste gelöscht werden.
+- **FEATURE:** Das Blacklist Filter-Icon in der Toolbar kann mittels *Einstellungen/Allgemein* mit einem aussagefähigen Zusatztext dargestellt werden.
+- **FEATURE:** Dark Mode für Filter-Dialog.
+- **FEATURE:** Beschleunigte Verarbeitung von Lucene mittels native access aktiviert (benötigt `--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector` in den Startparametern)
+- **FEATURE:** *Einstellungen/Set bearbeiten* für Dark Mode-Kompatibilität angepasst.
+- **FEATURE:** Der Einstellungen-Dialog ist nun vollständig Dark-Mode-kompatibel.
+- **FEATURE:** Im Tab Filme kann nun *Sender - Thema - Titel* in die Zwischenablage per Kontextmenü kopiert werden.
+- **FEATURE:** Bei Änderungen der Senderauswahl wird nun jeweils einmalig per Warndialog auf die Notwendigkeit eines Neustarts der App hingewiesen.
+- **FEATURE:** Im Tab Filme kann nun die Filmbeschreibung per Kontextmenü in die Zwischenablage kopiert werden.
+- **FEATURE:** Im Tab Beschreibung und im FilmInfo-Dialog können jeweils selektierte Texte der Beschreibung per Kontextmenü in die Zwischenablage kopiert werden.
+- **FEATURE(Linux):** Für exotische Window Manager können nun die FlatLaf-Dekorationen mittels `-dfd` oder `--disable-flatlaf-decorations` Parametern deaktiviert werden.
+- **FEATURE:** Info-Datei kann nun per Kontextmenü für jeden Eintrag manuell erzeugt werden.
+- **FEATURE:** Die Filmliste wird nun beim Laden zusätzlich auf Duplikate untersucht. Hierbei werden die Mediatheken der ARD und ZDF erst am Ende berücksichtigt um das Angebot der "kleineren" Sender nicht zu benachteiligen.
+- **FEATURE:** Duplikate werden im Tab `Filme` farblich hervorgehoben. Die Farbe kann in den Einstellungen modifiziert werden. Es werden nur Filme als Duplikat markiert, deren normale und high-quality Film-URL identisch sind.
+- **FEATURE:** Duplikate können im Filterpanel ausgeblendet werden.
+- **FEATURE:** Im Tab `Filme` können über das Kontextmenü `Zusammengehörige Filme anzeigen...` bei einem markierten Duplikat alle zusammengehörigen Filme angezeigt werden.  
+- **FEATURE:** Mittels `Ansicht/Filmstatistik anzeigen` können nun für die vorhandenen Sender Informationen bzgl. Anzahl der Filme und der Duplikate angezeigt werden. Es wird hier nur die gesamte Filmliste ohne jegliche Filter abzüglich Livestreams berücksichtigt, so dass es zu Abweichungen zur Anzeige in der Statuszeile kommen kann.
+- **FEATURE:** Mit der Lucene-Suche können mittels des `duplicate`-Boolean Parameters Filmduplikate berücksichtigt werden.
+- **FEATURE:** Via `Ansicht/Übersicht aller Duplikate anzeigen...` werden in einem Dialog per Sender alle vorhandenen Duplikate dargestellt zzgl. der zugeordneten Filme.
+- **FEATURE:** Geschwindigkeitsoptimierungen für die moderne Suche.
+- **FEATURE:** Mittels Menü `Downloads/Untertiteldatei zu Video hinzufügen...` kann eine vorhandene Untertiteldatei mit der korrekten Sprachzuordnung zu einem Video hinzugefügt werden. Moderne Videoplayer erkennen die Untertitelspur automatisch und man muss keine separaten Untertiteldateien mehr verwalten.
+- **FEATURE:** Merkliste: Die Funktionen sind nun über eine Toolbar im Tab Filme steuerbar.
+- **FEATURE:** Merkliste: Die Menüfunktion *Filme/Ausgewählte Filme merken* und die jeweiligen Toolbar-Buttons können nun mit Mehrfachauswahl von Filmen umgehen.
+- **FEATURE:** Die Sender *ONE*, *ARD-alpha* und *tagesschau24* wurden hinzugefügt. Bei bestehenden Installationen müssen diese in den Einstellungen manuell aktiviert werden! Es werden vorerst keine Senderlogos dargestellt.
+
+# **14.1.0**
 - JDK 21 wird nun mitgeliefert. Behebt primär Darstellungsfehler von Java Apps unter Windows.
-- CVE in xerial-jdbc Bibliothek wurde durch eine neuere Version gefixt. 
+- **macOS/Windows:** ffmpeg 7.0 ist nun enthalten.
+- **macOS Intel: Minimum OS-Version ist 10.15 Catalina! Diese Version wurde nur damit getestet! Sie mag auf früheren macOS Systemen laufen, dafür gibt es keine Garantie und keinen Support!**
+- **macOS Intel:** Es wird JDK 21 mitgeliefert, das zukünftig genutzte JDK 22 wird nicht mehr mit macOS Versionen vor 11 Big Sur funktionieren.
+- **macOS Apple Silicon:** Aufgrund bekannter größerer Fehler von JDK 21 auf neueren macOS Versionen wird hier JDK 22 verwendet.
+- CVE in xerial-jdbc Bibliothek wurde durch eine neuere Version gefixt.
+- **macOS:** Die Position der Reiter kann nicht mehr geändert werden, da dies zu Problemen mit der Fensterdarstellung führt. Die Einstellungen dafür werden zurück gesetzt und können im Programm nicht mehr geändert werden. 
 - **Linux:** Native notifications wurden für aktuelle Bibliotheksversion angepasst.
 - **BUGFIX:** Inkorrekte Beschreibung des "Gespeicherten Film abspielen" Toolbar-Button im Tab Download wurde korrigiert.
 - **BUGFIX:** Fehlendes Kontextmenü beim Suchfeld wurde hinzugefügt.
@@ -16,17 +79,34 @@
 - **BUGFIX:** Im *Zeilen umbrechen*-Modus des Tab Downloads werden die Einträge nun einheitlich dargestellt.
 - **BUGFIX:** Im Tab Filme wurde der Kontextmenüeintrag "Film aufzeichnen" konform zum Menüeintrag in "Film downloaden" angepasst.
 - **BUGFIX:** Im Tab Filme wurden die Darstellungsfehler im Kontextmenü beim Hell/Dunkel-Wechsel korrigiert.
+- **BUGFIX:** Toolbar "Allgemein" wird nun nicht mehr falsch dargestellt im Tab wenn die Tab-Position seitlich ist.
+- **BUGFIX(Windows/Linux):** Der Text der Reiter "Filme" und "Downloads" wird nun korrekt rotiert wenn die Reiterposition nicht oben ist.
+- **BUGFIX:** Im *Merkliste verwalten*-Dialog wird nun der richtige Download-Dialog verwendet.
+- **BUGFIX(Linux):** Es wird nun ein konfigurierter Browser gestartet wenn die von Java zur Verfügung gestellten Funktionen nicht funktionieren.
+- **BUGFIX:** *Merkliste verwalten*-Dialog verwendet nun primär die JavaFX styleguide Vorgaben.
+- **BUGFIX:** In Film-URLs werden nun vor dem Download alle Query-Parameter entfernt.
 - **FEATURE:** In der Filmliste kann die Darstellung der Info-Icons nun so konfiguriert werden, dass sie links oder Rechts des Titels dargestellt werden. Dies erfolgt mit der Checkbox unter *Einstellungen/Allgemein->Info-Icons der Listen rechts darstellen*.
 - **FEATURE(Windows/Linux):** Geänderte Programmschriftart und -größe wird nun gespeichert und beim Start wiederhergestellt.
 - **FEATURE:** Die URLs des selektierten Films können nun für HQ und normale Auflösung mittels `Strg+Alt+Shift+H` bzw. `Strg+Alt+Shift+N` oder wie bisher über das Kontextmenü in die Zwischenablage kopiert werden. Unter macOS ersetze `Strg` mit `Command`.
 - **FEATURE:** MV kann mittels `-dq` oder `--download-quit` Parameter zum automatischen Download aller Filme in der Downloadansicht mit anschließender automatischer Beendigung aufgefordert werden.
 - **FEATURE:** Im Hilfe-Menü wurde ein Eintrag zu den Frequently Asked Questions (FAQ) ergänzt.
-- **FEATURE:** Im *"Film speichern"*-Dialog können nun zur jeweils ausgewählten Qualitätsstufe ergänzende Filminformationen aus dem Netz geladen werden (Höhe x Breite, Bitrate).
+- **FEATURE:** Im *"Film speichern"*-Dialog können nun zur jeweils ausgewählten Qualitätsstufe ergänzende Codec-Informationen für die gewählte URL aus dem Netz geladen werden.
 - **FEATURE(Linux):** Dark Mode Erkennung funktioniert nun auch mit GNOME. Danke an @swsnr!
 - **FEATURE(Linux):** Die Fensterdekorationen der Windows/macOS-Versionen werden nun auch unter Linux verwendet.
 - **FEATURE:** Das Nachladen von fehlenden Filmgrößen kann in den *Einstellungen/Aufzeichnen und Abspielen/Download* abgeschaltet werden.
 - **FEATURE:** Fehlerhafte Downloads werden nun automatisch aus der Gesehen Datenbank entfernt.
-- 
+- **FEATURE(Windows/Linux):** Darkmode Button wird ab Windows 10 und unter Linux in der Menüzeile neben den window controls angezeigt.
+- **FEATURE(Windows/Linux):** Tab-Labels werden nun korrekt rotiert wenn die Tab-Position nicht oben ist.
+- **FEATURE:** Der bevorzugte DNS-IP-Auflösungsmodus kann nun via `-dpm <XXX>` oder `--dns-preference-mode <XXX>` geändert werden. Zulässige Werte sind `system`, `ip_v6`, `ip_v4`, `ip_v6_only`, `ip_v4_only` (Standardwert). Eine Änderung kann bei IPv6-only Internetanschlüssen notwendig sein.
+- **FEATURE:** Die Suchhistorie kann nun im Kontextmenü editiert werden.
+- **FEATURE:** Dialog "Filminformation" kann nun vollständig vergrößert oder verkleinert werden.
+- **FEATURE:** Die Filter werden nun über einen eigenen Button umbenannt und nicht mehr durch Eingabe in der ComboBox.
+- **FEATURE:** Bei der Lucene-Suche dürfen Wildcards nun auch am Anfang des Suchtexts verwendet werden.
+- **FEATURE:** Die Datenbank der gesehenen Filme kann nun über das Menü *"Hilfe/Hilfsmittel/History-Datenbank optimieren..."* von eventuell vorhandenen Duplikaten befreit werden. Dies kann die Performance des Programms bei einer großen (und älteren) Datenbank positiv beeinflussen.
+- **FEATURE:** Der Default-Wert zum automatischen Weiterführen von Downloads kann nun in den Einstellungen unter "Download" angepasst werden (Wertebereich 1-60).
+- Network Timeout wurde auf 10 Sekunden erhöht. Dies sollte bei schlechten Netzwerkverbindungen etwas Abhilfe schaffen.
+
+
 # **14.0.0**
 - **ACHTUNG: macOS Sonoma 14.1 verursacht diverse Probleme und Programmhänger! Einige dieser Probleme konnten beseitigt werden, führen aber zu kleineren Einschränkungen.**
 - macOS: Speicherverbrauchsanzeige wurde deaktiviert. Sie verursacht bisher unbekannte Programmanomalien unter macOS Sonoma 14.1
